# helpfulferret

./: .gitignore  .goreleaser.yaml  Makefile  README.md  go.mod  justfile  magefile.go  main.go  main.tf  pyproject.toml
cmd/: hello.go  root.go  root_test.go  version.go
src/helpfulferret/: __init__.py  cli.py  db.py  dictionary_reader.py  word_collector.py
src/helpfulferret/commands/: categorize.py  show.py
