[project]
name = "helpfulferret"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
   { name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }
]
requires-python = "==3.10.16"
dependencies = [
   "pip==24.3.1",
   "setuptools==75.6.0",
   "spacy==3.8.3",
   "wheel==0.45.1",
]

[project.scripts]
helpfulferret = "helpfulferret:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
